# SnakeMultiplayer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
include/common/: Constants.h  Hash.h  Log.h  MessageLogReader.h  MessageLogWriter.h  ProtocolMessage.h  Timer.h
include/engine/: ClientMessage.h  Engine.h  NetworkLayer.h  ProtocolMessage.h
include/snake_bot/: BotNetwork.h  Pathfinder.h  SnakeBot.h
include/snake_client/: GameState.h  NetworkClient.h  SnakeClient.h
include/snake_server/: Constants.h  NetworkServer.h  Player.h  ServerConfig.h  SnakeServer.h
src/engine/: Engine.cpp  NetworkLayer.cpp
src/snake_bot/: BotNetwork.cpp  Pathfinder.cpp  SnakeBot.cpp  main.cpp
src/snake_client/: NetworkClient.cpp  SnakeClient.cpp  main.cpp
src/snake_server/: NetworkServer.cpp  SnakeServer.cpp  main.cpp
tests/: CMakeLists.txt  replay_determinism_test.cpp  server_config_test.cpp
tests/data/: test_replay.jsonl
